<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_advertisements"
            android:icon="@drawable/ic_baseline_font_download_24"
            android:title="@string/menu_advertisements" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_baseline_rate_review_24"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_expense_tracker"
            android:icon="@drawable/ic_baseline_monetization_on_24"
            android:title="@string/menu_expense_tracker" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_pin_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logout" />
    </group>
</menu>